app/traffic-generator-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-generator-2
  namespace: cpu
  labels:
    app: traffic-generator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traffic-generator
  template:
    metadata:
      labels:
        app: traffic-generator
      annotations:
    spec:
      containers:
        - name: traffic-generator
          image: everpeace/curl-jq
          command:
            - "sh"
            - "-c"
            - while true; do curl -s web-fe/FindMe/; sleep $(shuf -i0-2 -n1); curl -s web-fe; sleep $(shuf -i0-2 -n1); curl -s web-fe/api; sleep $(shuf -i0-2 -n1); curl -s web-fe/api; sleep $(shuf -i0-2 -n1); curl -s web-fe/NotAllowed/; sleep $(shuf -i0-2 -n1); curl -s web-fe/api/; sleep $(shuf -i0-2 -n1); curl -s web-fe; sleep $(shuf -i0-2 -n1); curl -s web-fe/FindMe/; sleep $(shuf -i0-2 -n1); curl -s web-fe/api/; sleep $(shuf -i0-2 -n1); curl -s web-fe/api/; sleep $(shuf -i0-2 -n1); done
