app/traffic-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-generator
  namespace: cpu
  labels:
    app: traffic-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-generator
  template:
    metadata:
      labels:
        app: traffic-generator
      annotations:
    spec:
      containers:
        - name: traffic-generator
          image: everpeace/curl-jq
          command:
            - "sh"
            - "-c"
            - while true; do curl -s web-fe/api/; sleep $(shuf -i0-2 -n1); curl -s web-fe; sleep $(shuf -i0-2 -n1); curl -s web-fe; sleep $(shuf -i0-2 -n1); curl -s --connect-timeout 2 google.com; sleep $(shuf -i0-2 -n1); curl -s web-fe/FindMe/; sleep $(shuf -i0-2 -n1); curl -s web-fe/FindMe/; sleep $(shuf -i0-2 -n1); curl -s web-fe/NotAllowed/; sleep $(shuf -i0-2 -n1); curl -s web-fe/api/; sleep $(shuf -i0-2 -n1); curl -s --connect-timeout 2 cilium.io; sleep $(shuf -i0-2 -n1); done
