app/web-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-be
  namespace: cpu
  labels:
    app: web-be
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-be
  template:
    metadata:
      labels:
        app: web-be
      annotations:
    spec:
      containers:
        - name: web-be
          image: nginx
          ports:
          - containerPort: 80
            name: http
          volumeMounts:
          - mountPath: /usr/share/nginx/html/
            name: web-be
          - mountPath: /usr/share/nginx/html/api/
            name: web-be-api
          - mountPath: /etc/nginx/conf.d
            readOnly: true
            name: nginx-conf
      volumes:
        - name: web-be
          emptyDir: {}
        - name: web-be-api
          emptyDir: {}
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: default.conf
                path: default.conf

# ---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: web-be

---
apiVersion: v1
kind: Service
metadata:
  name: web-be
  namespace: cpu
  labels:
    app: web-be
spec:
  selector:
    app: web-be
  ports:
    - name: web-be
      port: 80
      targetPort: 80
