app/web-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-fe
  namespace: cpu
  labels:
    app: web-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-fe
  template:
    metadata:
      labels:
        app: web-fe
      annotations:
    spec:
      containers:
        - name: web-fe
          image: haproxy
          ports:
          - containerPort: 8080
            name: http
          - containerPort: 443
            name: https
          volumeMounts:
          - mountPath: /usr/local/etc/haproxy
            readOnly: true
            name: web-fe
      # serviceAccountName: web-fe
      volumes:
        - name: web-fe
          configMap:
            name: web-fe
            items:
              - key: haproxy.cfg
                path: haproxy.cfg
---
apiVersion: v1
kind: Service
metadata:
  name: web-fe
  namespace: cpu
  labels:
    app: web-fe
spec:
  selector:
    app: web-fe
  ports:
    - name: web-fe
      port: 80
      targetPort: 8080
  # type: LoadBalancer
